# running-signals

./: .env.example  .gitignore  README.md  pnpm-lock.yaml  pyproject.toml
.github/workflows/: deploy-databricks-bundle.yml  incremental-fit-refresh.yml  incremental-refresh.yml
apps/site/: .env.example  README.md  next.config.ts  package.json  pnpm-lock.yaml
databricks/: databricks.yml
databricks/resources/: jobs.yml
dbt/: dbt_project.yml  profiles.yml.example  selectors.yml
dbt/analyses/: run_data_availability.sql
dbt/macros/: analytics_current_date.sql
dbt/models/: models.yml  sources.yml
dbt/tests/: mart_activity_records_complete.sql  mart_activity_records_keys_match_silver.sql  mart_activity_records_ordered.sql  mart_map_profile_records_keys_match_activity_records.sql  mart_map_profile_records_max_500_per_run.sql  mart_route_clusters_route_match_similarity_range.sql  mart_run_segments_distance_reconciliation.sql  mart_run_segments_final_segment_retained.sql  mart_run_segments_positive_distance_timing.sql  mart_run_segments_valid_boundaries.sql  mart_segment_resolutions_required_defaults.sql  mart_segment_resolutions_valid_configuration.sql  (+4 more)
docs/: agent-interface.md  architecture.md  data-model.md  engineering-decisions.md  garmin-data-exploration.md  incremental-refresh.md  layer-runbook.md  project-overview.md  rag-extension.md  signal-definitions.md  technical-decisions.md
notebooks/: 01_garmin_payload_exploration.ipynb
scripts/: README.md  __init__.py  download_garmin_fit.py  download_garmin_health.py  pipeline.py  pipeline_state.py  sync_site_supabase.py
supabase/: config.toml  seed.sql
tests/: test_download_garmin_fit_cli.py  test_fit_only_windowed_serving_migration.py  test_garmin_bronze.py  test_garmin_client.py  test_garmin_download.py  test_garmin_health_bronze.py  test_garmin_health_download.py  test_map_profile_rpc_timeout_migration.py  test_pipeline.py  test_sync_site_supabase.py
(+175 files in other folders)
