[project]
name = "running-signals"
version = "0.1.0"
description = "Live analytics engineering portfolio project using Garmin running data, Databricks, dbt, Python, and SQL."
requires-python = ">=3.11"
dependencies = [
  "garminconnect>=0.3.6",
  "pydantic>=2.13.4",
  "python-dotenv>=1.2.2",
  "pandas>=3.0.4",
  "pyarrow>=24.0.0",
  "databricks-sdk>=0.119.0",
  "dbt-core>=1.11.11",
  "dbt-databricks>=1.12.1"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.15.20",
  "pytest>=9.1.1",
  "mypy>=2.1.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true